<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuDashboard"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/menuProfile"
            android:title="@string/myProfile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/menuFav"
            android:title="@string/favRes"
            android:icon="@drawable/ic_fav_res"/>

        <item
            android:id="@+id/menuHistory"
            android:title="@string/orderHistory"
            android:icon="@drawable/ic_order_history"/>

        <item
            android:id="@+id/menuFaq"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>