<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:text="@string/txtOTP"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:hint="@string/et_OTP"
        android:inputType="number"
        android:maxLines="1"
        android:minEms="4"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:hint="@string/et_new_pass"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:hint="@string/et_con_pass"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnRPSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="6dp"
        android:background = "#f44336"
        android:text="@string/btn_submit"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

</LinearLayout>