<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foodrunner_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@id/imgLogo"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:padding="6dp"
        android:text="@string/txtFPMobEmail"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etFPMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:padding="6dp"
        android:layout_below="@+id/txtForgotPassword"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/mobile_number"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="5dp"
        android:background="#ffffff"/>

    <EditText
        android:id="@+id/etFPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:padding="6dp"
        android:layout_below="@+id/etFPMobile"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/loginEmail"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="6dp"
        android:layout_below="@id/etFPEmail"
        android:background = "#f44336"
        android:text="@string/nextFP"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textAllCaps="false"/>

</RelativeLayout>